fix homepage alignments

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -64,7 +64,7 @@ hr {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 3rem;
+  padding: 1rem 7rem;
 
   * {
     font-size: 28px;
@@ -200,6 +200,7 @@ hr {
 }
 
 #servers {
+  border-top: 10px solid #fff;
   position: relative;
   padding-top: 3rem;
   background-image: url("../vectors/bg-game-servers.svg");
@@ -209,16 +210,14 @@ hr {
   background-position-y: -40px;
   background-position-x: 161px;
 
+  .heading {
+    margin-bottom: 2rem;
+  }
+
   img.dots-top-right {
     position: absolute;
     top: 0;
     right: 0;
-  }
-
-  hr.imgs-top {
-    margin: 1rem 0;
-    margin-left: var(--align-margin);
-    max-width: 1271px;
   }
 
   hr.imgs-bottom {
